[tool.poetry]
name = "cicd-test"
version = "0.1.0"
description = "Project CI/CD for вdeploy scientific projects"
authors = ["ilsaf <ilsaf.corp@gmail.com>"]
readme = "README.md"
packages = [{include = "cicd_test"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
click = "^8.1.3"
colorama = "^0.4.6"
coverage = "^7.2.7"
exceptiongroup = "^1.1.2"
iniconfig = "^2.0.0"
isort = "^5.12.0"
joblib = "^1.3.1"
mando = "^0.7.1"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
click = "8.1.3"
colorama = "0.4.6"
coverage = "7.2.7"
iniconfig = "2.0.0"
isort = "5.12.0"
mando = "0.7.1"
mypy = "1.4.0"
mypy-extensions = "1.0.0"
numpy = "1.25.0"
packaging = "23.1"
pathspec = "0.11.1"
platformdirs = "3.8.0"
pluggy = "1.2.0"
pytest = "7.4.0"
pytest-cov = "4.1.0"
radon = "6.0.1"
scikit-learn = "1.2.2"
six = "1.16.0"
threadpoolctl = "3.1.0"
tomli = "2.0.1"
typing-extensions = "4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
